Changed EXP and EXP Share
Survive poisoining
Phys/Special Split 
Fairy Type
4th Stat Page (with working 4 times of day)
Grass Powder Immuninty