@@ -4,3 +4,6 @@ Phys/Special Split
 Fairy Type
 4th Stat Page (with working 4 times of day)
 Grass Powder Immuninty
+All Pokemon are easier to catch
+All Pokemon give more EXP
+Most Trainer battles have been modified (still need to do Kanto Gym & E4)
